--- a/second semester/homework2_task3/Homework2_task3/Homework2_task3/Homework2_task3.csproj
+++ b/second semester/homework2_task3/Homework2_task3/Homework2_task3/Homework2_task3.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hash.cs" />
+    <Compile Include="HashNumberOne.cs" />
+    <Compile Include="HashNumberTwo.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
