--- a/second semester/homework2_task3/Homework2_task3/Homework2_task3/Homework2_task3.csproj
+++ b/second semester/homework2_task3/Homework2_task3/Homework2_task3/Homework2_task3.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Hash.cs" />
     <Compile Include="HashNumberOne.cs" />
     <Compile Include="HashNumberTwo.cs" />
+    <Compile Include="InterfaceForHashFunction.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
