мм, а теперь кто-то нормально прочитал задание.. ноо..!

--- a/second semester/homework4_task1/Homework4_task1/Homework4_Task1.Tests/Homework4_Task1.Tests.csproj
+++ b/second semester/homework4_task1/Homework4_task1/Homework4_Task1.Tests/Homework4_Task1.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>826d1e84-d9d4-4b14-853d-a67239cdeb28</ProjectGuid>
+    <ProjectGuid>{AB160FC8-6AD9-4ACC-B4B4-576EC8E91704}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Homework4_Task1.Tests</RootNamespace>
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="CounterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Homework4_task1\Homework4_task1.csproj">
+      <Project>{de774be3-60f6-4cfb-a908-da9027536a7b}</Project>
+      <Name>Homework4_task1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
