--- a/second semester/homework4_task1/Homework4_task1/Homework4_task1/Homework4_task1.csproj
+++ b/second semester/homework4_task1/Homework4_task1/Homework4_task1/Homework4_task1.csproj
@@ -41,12 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Addiction.cs" />
+    <Compile Include="Division.cs" />
+    <Compile Include="Multiplication.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="Operand.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subtraction.cs" />
     <Compile Include="Tree.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
