--- a/second semester/Homework5_task1/Homework5_task1.Tests/Homework5_task1.Tests.csproj
+++ b/second semester/Homework5_task1/Homework5_task1.Tests/Homework5_task1.Tests.csproj
@@ -50,8 +50,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="FunctionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ListTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Homework5_task1\Homework5_task1.csproj">
+      <Project>{fa62a05e-d58d-4c50-bae9-d9b7b16986d2}</Project>
+      <Name>Homework5_task1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
