--- a/second semester/Homework5_task1/Homework5_task1/Homework5_task1.csproj
+++ b/second semester/Homework5_task1/Homework5_task1/Homework5_task1.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassForMap.cs" />
+    <Compile Include="ClassForFunction.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
