--- a/third semester/task1_1/task1/task1/task1.csproj
+++ b/third semester/task1_1/task1/task1/task1.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryTreeIterator.cs" />
     <Compile Include="BinaryTreeSeach.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
