--- a/third semester/task1_1/task1/task1/task1.csproj
+++ b/third semester/task1_1/task1/task1/task1.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryTreeIterator.cs" />
     <Compile Include="BinaryTreeSeach.cs" />
+    <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
