--- a/third semester/task1_2/task2/task2/task2.csproj
+++ b/third semester/task1_2/task2/task2/task2.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="OSClass.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Simulation.cs" />
+    <Compile Include="StorageNetworkTopology.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
