--- a/fourth semester/task1_2/task1_2/task1_2.fsproj
+++ b/fourth semester/task1_2/task1_2/task1_2.fsproj
@@ -5,12 +5,12 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>fbc4af62-0048-4e11-bb14-07f18e42a1bc</ProjectGuid>
+    <ProjectGuid>d5095d02-8ec9-4415-8e28-f2150812f615</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>task1_1</RootNamespace>
-    <AssemblyName>task1_1</AssemblyName>
+    <RootNamespace>task1_2</RootNamespace>
+    <AssemblyName>task1_2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <Name>task1_1</Name>
+    <Name>task1_2</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\task1_1.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\task1_2.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\task1_1.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\task1_2.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
@@ -45,7 +45,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="factorial.fs" />
+    <Compile Include="fibonacchi.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
